[package]
name = "tilegen"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfc = { version = "0.9.1" }
image = "0.23.9"
direction = "0.17.10"
rand = "0.7.3"
serde = { version = "1.0.115", features = ["derive"] }
ron = "0.6.1"
env_logger = "0.7.1"
log = "0.4.11"
structopt = "0.3.17"

[features]
default = ["parallel"]
parallel = ["wfc/parallel"]
